--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,27 @@
 <html>
+    <title> index </title>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="src/main/resources/css/style.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
 </head>
  <body>
- <h3> ClosingTime </h3>
+    <div class="jumbotron text-center">
+    <div class="container-fluid">
+        <h1> 
+        <button type="button" class="btn"> buy </button> 
+        <button type="button" class="btn"> favorites </button> 
+        ClosingTime 
+        <button type="button" class="btn"> chat </button>
+        <button type="button" class="btn"> account </button>
+        </h1>
+    </div>
+    </div>
+
  </body>
  </html>
 
+ 
